--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,18 @@ h1  {
     font-family: 'Black Ops One', cursive;
 
 }
+
+body {
+    text-align: center;
+}
+
+button {
+    margin-top: -1000px;
+}
+
+#footer {
+    display: flex;
+    justify-content: space-between;
+    color: white;
+
+}
